; ModuleID = '/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_Check6StageLUT.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/ext/lcms2/testbed/extr_testcms2.c_Check6StageLUT.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 ()* @Check6StageLUT to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @Check6StageLUT() #0 {
  %1 = alloca i32*, align 8
  %2 = call i32 (...) @DbgThread()
  %3 = call i32* @cmsPipelineAlloc(i32 %2, i32 3, i32 3)
  store i32* %3, i32** %1, align 8
  %4 = load i32*, i32** %1, align 8
  %5 = call i32 @AddIdentityMatrix(i32* %4)
  %6 = load i32*, i32** %1, align 8
  %7 = call i32 @Add3GammaCurves(i32* %6, double 1.000000e+00)
  %8 = load i32*, i32** %1, align 8
  %9 = call i32 @AddIdentityCLUTfloat(i32* %8)
  %10 = load i32*, i32** %1, align 8
  %11 = call i32 @Add3GammaCurves(i32* %10, double 1.000000e+00)
  %12 = load i32*, i32** %1, align 8
  %13 = call i32 @AddIdentityMatrix(i32* %12)
  %14 = load i32*, i32** %1, align 8
  %15 = call i32 @Add3GammaCurves(i32* %14, double 1.000000e+00)
  %16 = load i32*, i32** %1, align 8
  %17 = call i32 @CheckFullLUT(i32* %16, i32 6)
  ret i32 %17
}

declare dso_local i32* @cmsPipelineAlloc(i32, i32, i32) #1

declare dso_local i32 @DbgThread(...) #1

declare dso_local i32 @AddIdentityMatrix(i32*) #1

declare dso_local i32 @Add3GammaCurves(i32*, double) #1

declare dso_local i32 @AddIdentityCLUTfloat(i32*) #1

declare dso_local i32 @CheckFullLUT(i32*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
